syntax = "proto3";

package p2p.giga;

import "autobahn/autobahn.proto";

option go_package = "github.com/tendermint/tendermint/internal/p2p/giga/pb";

message LaneReq {
  autobahn.SignedMsg lane_proposal = 1;
}

message LaneResp {
  autobahn.SignedMsg lane_vote = 1;
}

message LaneQCsResp {}

message ConsensusResp {}

message PingReq {}
message PingResp {}

message LaneVote {
  autobahn.SignedMsg lane_vote = 1;
}

message LaneProposal {
  autobahn.SignedMsg lane_proposal = 1;
}

message AppVote {
  autobahn.SignedMsg app_vote = 1;
}

message StreamLaneProposalsReq {
  uint64 first_block_number = 1;
}

message StreamAppQCsReq {}
message StreamAppQCsResp {
  autobahn.AppQC app_qc = 1;
  autobahn.CommitQC commit_qc = 2;
}

message StreamCommitQCsReq {}
message StreamLaneVotesReq {}
message StreamAppVotesReq {}

message GetBlockReq {
  uint64 global_number = 1;
}

message GetBlockResp {
  optional autobahn.Block block = 1;
}

message StreamFullCommitQCsReq {
  uint64 next_block = 1;
}
